--- a/source/blocks/components/main-nav/_main-nav.scss
+++ b/source/blocks/components/main-nav/_main-nav.scss
@@ -4,12 +4,21 @@
   right: -15px;
   top: 37px;
   z-index: 10;
+  @media (min-width:768px) {
+    display: block !important;
+    position:static;
+  }
   &__list {
     list-style-type: none;
     display:flex;
     flex-direction: column;
     background-color: #F3F7FA;
     padding: 15px 25px;
+    @media (min-width:768px) {
+      background-color: transparent;
+      flex-direction:row;
+      padding: 0;
+    }
 
 
   }
