--- a/source/styles/utils/_variables.scss
+++ b/source/styles/utils/_variables.scss
@@ -2,7 +2,7 @@
 $base-color: #fff;
 $accent-color: #4AF6CD;;
 $additional-color: #304054;
-$background-color: #fff;
+$background-color: #f3f7fa;
 $text-color: #2F3035;
 $base-font: 'SFProDisplay-Regular', sans-serif;
 // Fonts
