--- a/source/blocks/components/comments/_comments.scss
+++ b/source/blocks/components/comments/_comments.scss
@@ -1,8 +1,9 @@
 .comments {
 padding-top: 50px;
+margin-bottom: 117px;
   .swiper-container {
     height: 600px;
-
+    padding-bottom: 10px;
     @media (min-width: 768px) {
       height: 200px;
     }
@@ -19,16 +20,25 @@ padding-top: 50px;
 
   }
 
+  &__wrapper {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+
+  }
+
+
   &__slide {
     font-family: 'Montserrat-regular';
     color: #212121;
-    width: 100%;
-   // max-height: 180px;
+    border-radius: 5px;
+    border: 0.5px solid #D2D2D2;
+    max-width:355px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-right: 30px;
     @media (min-width: 768px) {
-     // max-height: auto;
     }
 
   }
@@ -36,7 +46,8 @@ padding-top: 50px;
   &__text {
     font-size: 12px;
     line-height: 130.6%;
-    margin-bottom: 40px;
+
+    margin: 27px 50px 50px 27px;
     min-height:50px;
   }
 
