--- a/source/blocks/components/comments/comments.html
+++ b/source/blocks/components/comments/comments.html
@@ -15,7 +15,7 @@
               <div class="comments__athor-name">Екатерина</div>
               <div class="comments__athor-status">Студентка</div>
             </div>
-            <div class="comments__athor-photo"><img src="#"></div>
+            <div class="comments__athor-photo"><img src="img/content/photo1.png"></div>
           </div>
         </div>
 
@@ -33,7 +33,7 @@
               <div class="comments__athor-name">Елена</div>
               <div class="comments__athor-status">Упровляющий</div>
             </div>
-            <div class="comments__athor-photo"><img src="#"></div>
+            <div class="comments__athor-photo"><img src="img/content/photo2.png"></div>
           </div>
 
 
@@ -52,7 +52,7 @@
               <div class="comments__athor-name">Владислав</div>
               <div class="comments__athor-status">Директор</div>
             </div>
-            <div class="comments__athor-photo"><img src="#"></div>
+            <div class="comments__athor-photo"><img src="img/content/photo3.png"></div>
           </div>
 
         </div>
