--- a/source/blocks/components/parteners/_parteners.scss
+++ b/source/blocks/components/parteners/_parteners.scss
@@ -1,6 +1,7 @@
 .parteners {
   text-align: center;
   margin-top: 400px;
+  background-color: #fff;
   @media (min-width:500px) {
     margin-top: 310px;
 
