--- a/source/blocks/components/page-menu/_page-menu.scss
+++ b/source/blocks/components/page-menu/_page-menu.scss
@@ -1,21 +1,24 @@
 .page-menu {
   padding:35px 0;
  &__title {
-  font-size: 21px;
-  line-height: 26px;
+  font-size: 35px;
+  line-height: 43px;
   font-family: 'Montserrat-bold';
   color: #212121;
   background-color: transparent;
   margin-bottom: 17px;
  }
  &__list {
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 24px;
+  line-height: 29px;
   font-family: 'Montserrat-regular';
   margin-left: 17px;
 
  }
-
+ &__wrapper {
+   display: flex;
+   justify-content: space-between;
+ }
 
  &__list-item {
    list-style: none;
