added shadow to main banner

--- a/source/blocks/components/main-banner/_main-banner.scss
+++ b/source/blocks/components/main-banner/_main-banner.scss
@@ -2,7 +2,7 @@
   min-height: 581px;
   text-align: center;
   background-image: url("../img/content/culture-11.jpg");
-  //padding: 60px 30px;
+  box-shadow: inset 0px 0px 277px 3px #fff;
   background-repeat: no-repeat;
   background-size: cover;
   &__text-wrapper {
