added page nav links

--- a/source/blocks/components/page-menu/page-menu.html
+++ b/source/blocks/components/page-menu/page-menu.html
@@ -4,16 +4,16 @@
     <div class="page-menu__wrapper">
       <h2 class="page-menu__title">Оглавление</h2>
       <ul class="page-menu__list">
-        <li class="page-menu__list-item"><a href="#" class="page-menu__link" >Наши партнеры</a></li>
-        <li class="page-menu__list-item"><a href="#" class="page-menu__link" >Роботы форекс</a></li>
-        <li class="page-menu__list-item"><a href="#" class="page-menu__link" >Почему стоит выбрать нас?</a></li>
+        <li class="page-menu__list-item"><a href="#parteners" class="page-menu__link" >Наши партнеры</a></li>
+        <li class="page-menu__list-item"><a href="#what-is" class="page-menu__link" >Что такое рынок Форекс?</a></li>
+        <li class="page-menu__list-item"><a href="#types-robots" class="page-menu__link" >Виды торговых роботов Форекс </a></li>
 
      </ul>
 
      <ul class="page-menu__list">
-       <li class="page-menu__list-item"><a href="#" class="page-menu__link" >Вопросы</a></li>
-       <li class="page-menu__list-item"><a href="#" class="page-menu__link" >Связь с нами</a></li>
-       <li class="page-menu__list-item"><a href="#" class="page-menu__link" >Комментарии</a></li>
+       <li class="page-menu__list-item"><a href="#trading" class="page-menu__link" >Торговля на Форекс</a></li>
+       <li class="page-menu__list-item"><a href="#advantages" class="page-menu__link" >Преимущества торговых роботов Форекс </a></li>
+       <li class="page-menu__list-item"><a href="#faq" class="page-menu__link" >Часто задоваемые вопросы</a></li>
      </ul>
 
     </div>
