--- a/source/blocks/components/parteners/parteners.html
+++ b/source/blocks/components/parteners/parteners.html
@@ -1,4 +1,4 @@
-<section class="parteners">
+<section class="parteners" id="parteners">
 
   <div class="parteners__wrapper">
     <div class="parteners__item"><img src="img/content/case_Forex4you.jpg"></div>
