--- a/source/blocks/components/trading/trading.html
+++ b/source/blocks/components/trading/trading.html
@@ -1,4 +1,4 @@
-<section class="trading">
+<section class="trading" id="trading">
   <div class="container">
     <div class="trading__wrapper">
       <h2 class="trading__title" >Торговля на Форекс</h2>
