--- a/source/blocks/components/types-robots/types-robots.html
+++ b/source/blocks/components/types-robots/types-robots.html
@@ -1,4 +1,4 @@
-<section class="types-robots">
+<section class="types-robots" id="types-robots">
   <div class="container">
     <h2 class="types-robots__title">Виды торговых роботов Форекс</h2>
 
