--- a/source/blocks/components/what-is/what-is.html
+++ b/source/blocks/components/what-is/what-is.html
@@ -1,4 +1,4 @@
-<section class="what-is">
+<section class="what-is" id="what-is">
   <div class="container">
     <div class="what-is__wrapper">
       <h2 class="what-is__title" >Что такое рынок  Форекс? </h2>
