--- a/source/blocks/components/advantages/advantages.html
+++ b/source/blocks/components/advantages/advantages.html
@@ -1,4 +1,4 @@
-<section class="advantages">
+<section class="advantages" id="advantages">
   <div class="container">
     <h2 class="advantages__title">Преимущества торговых роботов Форекс
     </h2>
