back to top button was implemented

--- a/source/blocks/components/components.scss
+++ b/source/blocks/components/components.scss
@@ -18,6 +18,7 @@
 @import "accordion/_accordion.scss";
 @import "faq/_faq.scss";
 @import "comments/_comments.scss";
+@import "back-to-top/_back-to-top.scss";
 
 
 
