fixed mobile view

--- a/source/blocks/components/page-menu/_page-menu.scss
+++ b/source/blocks/components/page-menu/_page-menu.scss
@@ -18,6 +18,9 @@
  &__wrapper {
    display: flex;
    justify-content: space-between;
+   @media (min-width: 700px) {
+    flex-direction:column;
+   }
  }
 
  &__list-item {
