--- a/source/blocks/components/page-menu/_page-menu.scss
+++ b/source/blocks/components/page-menu/_page-menu.scss
@@ -18,8 +18,9 @@
  &__wrapper {
    display: flex;
    justify-content: space-between;
-   @media (min-width: 700px) {
-    flex-direction:column;
+   flex-direction: column;
+   @media (min-width: 768px) {
+    flex-direction:row;
    }
  }
 
